# MyRepoForFun

wzorceProjektowe/: CMakeLists.txt
wzorceProjektowe/src/: fabryka.hpp  main.cpp  wytworcza.hpp
